# outlookEmail

./: .dockerignore  .env.example  .gitignore  README.md  RELEASE.md  compose.env.example  compose.yaml  docker-compose.yaml  pyproject.toml  start_uv.bat
.github/workflows/: docker-build-push.yml  release.yml
docs/: api.md  deployment.md  security.md  troubleshooting.md
outlook_web/segments/: 06_routes_temp_email.py  07_routes_oauth_settings_external.py  08_forwarding_scheduler_errors.py
tests/: test_imap_folder_resolution.py
